# dealer-integration-platform

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pytest.yml  quality.yml
Files/: admin.py  models.py
Files/migrations/: 0001_initial.py
config/: celery.py  sentry.py  settings.py  test_settings.py  urls.py
dataimport/: admin.py  apps.py  loaders.py  models.py  tasks.py  vehicle_loaders.py
dataimport/migrations/: 0002_vehicaledataimport_dealer.py  0003_vehicledataimportparsingconfig_and_more.py  0004_vehicledataimportparsingconfig_columns_to_skip.py  0006_add_price_currency_mapping_choices.py  0007_rename_vehicle_data_import_models.py
dealer_platform/: datetime_utils.py
dealer_platform/dataimport/: admin.py  apps.py  loaders.py  models.py  tasks.py  vehicle_loaders.py
dealer_platform/dataimport/migrations/: 0001_initial.py  0005_require_vehicaledataimport_dealer.py  0008_alter_vehicledataimport_source.py
dealer_platform/files/: admin.py  apps.py  models.py  utils.py
dealer_platform/files/migrations/: 0002_alter_file_file.py
dealer_platform/integrations/: admin.py  apps.py  models.py  tasks.py
dealer_platform/integrations/migrations/: 0001_initial.py  0002_usacarintegrationconfig_name.py
dealer_platform/integrations/usacar/: __init__.py  client.py  exceptions.py  service.py
dealer_platform/inventory/: admin.py  apps.py  audit.py  export_resources.py  serializers.py  signals.py  urls.py  views.py
dealer_platform/inventory/migrations/: 0001_initial.py  0003_inventorylisting.py  0004_rename_inventorylisting_dealeroffer.py
docs/: db-structure.md
examples/: README.md  vehicle_import_custom_fields_extra_columns.csv  vehicle_import_dealer_downtown.csv  vehicle_import_dealer_lakeside.csv  vehicle_import_dealer_northside.csv  vehicle_import_large_2,5k_records.csv  vehicle_import_standard_fields.csv
examples/csv/: vehicle_import_dealer_downtown.csv  vehicle_import_dealer_lakeside.csv  vehicle_import_dealer_northside.csv  vehicle_import_large_2,5k_records.csv
examples/usa_car/: inventory_response.json  vehicle_import.csv
inventory/: admin.py  models.py  serializers.py  urls.py  views.py
inventory/migrations/: 0002_remove_vehicle_drivetrain_remove_vehicle_trim_and_more.py
scripts/: create_vehicle_custom_parsing_config.py  delete_vehicles.py  seed_vehicles.py
tests/: test_integrations.py  test_inventory_api.py  test_inventory_audit.py  test_inventory_exports.py  test_sentry.py  test_usacar.py  test_vehicle_import_examples.py
