[tool.poetry]
name = "dealer-inventory-etl"
version = "0.1.0"
description = "Django service for dealer inventory ETL."
authors = ["Mykola GORBAN"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
django = ">=6.0.6,<7.0"
psycopg = { version = ">=3.1,<4.0", extras = ["binary"] }

[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
isort = "^8.0.1"
flake8 = "^7.3.0"
mypy = "^2.1.0"
django-stubs = "^6.0.5"
watchdog = {extras = ["watchmedo"], version = "^6.0.0"}

[tool.black]
line-length = 79
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.14"
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true

[tool.django-stubs]
django_settings_module = "config.settings"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
