[project]
name = "dealer-integration-platform"
version = "0.1.0"
description = "Django service for dealer data integrations."
authors = [{ name = "Mykola GORBAN" }]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "django>=6.0.6,<7.0",
    "psycopg[binary]>=3.1,<4.0",
    "celery[redis]>=5.5,<6.0",
    "djangorestframework>=3.17,<4.0",
    "drf-spectacular[sidecar]>=0.29,<1.0",
    "django-import-export>=4.4.1",
    "djangorestframework-simplejwt>=5.5.1,<6.0",
    "httpx>=0.28,<1.0",
    "tenacity>=9.1,<10.0",
    "sentry-sdk>=2.0,<3.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1,<27.0.0",
    "isort>=8.0.1,<9.0.0",
    "flake8>=7.3.0,<8.0.0",
    "mypy>=2.1.0,<3.0.0",
    "django-stubs>=6.0.5,<7.0.0",
    "watchdog[watchmedo]>=6.0.0,<7.0.0",
    "pytest>=9.0.2,<10.0.0",
    "pytest-django>=4.11.1,<5.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "djangorestframework-stubs>=3.17.0",
]

[tool.uv]
package = false

[tool.black]
line-length = 79
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
]
python_version = "3.14"
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "import_export",
    "import_export.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.test_settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
